--- a/snippet-config.json
+++ b/snippet-config.json
@@ -13,7 +13,7 @@
         "configs":[{
           "label": "Pixel Id",
           "name": "pixelId",
-          "placeholder": "",
+          "placeholder": "12345",
           "priority": 0,
           "required": true,
           "type": "number"
